# simplemad

./: .coveralls.yml  .travis.yml  Cargo.toml  LICENSE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  coverage.yml
simplemad/: Cargo.toml  README.md
simplemad/src/: README.md  lib.rs
simplemad_sys/: Cargo.toml  README.md  build.rs
simplemad_sys/libmad-src/: aclocal.m4  config.h  configure  configure.ac  frame.c
simplemad_sys/libmad-src/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
simplemad_sys/src/: lib.rs
src/: decoder.rs  lib.rs
