[package]
name = "simplemad"
version = "0.1.0"
authors = ["Benjamin Dykstra <bendykst@gmail.com>"]
description = "An interface for libmad, the MPEG audio decoding library"
repository = "https://github.com/bendykst/simple-mad.rs"
readme = "README.md"
keywords = ["mpeg", "mp3", "libmad"]
license = "MIT"

[lib]
name = "simplemad"

[dependencies]
libc = "0.1.6"

