[package]
name = "simplemad"
version = "0.5.1"
authors = ["Benjamin Dykstra <bendykst@gmail.com>"]
description = "An interface for libmad, the MPEG audio decoding library"
repository = "https://github.com/bendykst/simple-mad.rs"
readme = "README.md"
documentation = "http://bendykst.github.io/doc/simplemad/index.html"
keywords = ["mpeg", "mp3", "libmad"]
license = "MIT"

[lib]
name = "simplemad"

[dependencies]
simplemad_sys = { version = "0.1.0", path = "../simplemad_sys" }
