[package]
name = "simplemad"
version = "0.9.0"
edition = "2018"
authors = ["Benjamin Dykstra <bendykst@gmail.com>"]
description = "An interface for libmad, the MPEG audio decoding library"
repository = "https://github.com/RustAudio/simplemad"
readme = "README.md"
documentation = "https://docs.rs/simplemad/"
keywords = ["mpeg", "mp3", "libmad"]
license = "MIT"

[lib]
name = "simplemad"

[dependencies]
simplemad_sys = { version = "0.5.0", path = "../simplemad_sys", features = ["vendor"] }
