[package]
name = "simplemad_sys"
version = "0.4.0"
authors = ["Benjamin Dykstra <bendykst@gmail.com>"]
description = "libmad 0.15.1b bindings for Rust"
repository = "https://github.com/bendykst/simple-mad.rs"
readme = "README.md"
documentation = "http://bendykst.github.io/doc/simplemad/index.html"
keywords = ["mpeg", "mp3", "libmad"]
license = "MIT"
build = "build.rs"

[build-dependencies]
gcc = "0.3"
pkg-config = "0.3"

[lib]
name = "simplemad_sys"

[dependencies]
libc = "0.1.6"
