[package]
name = "simplemad_sys"
version = "0.5.0"
authors = ["Benjamin Dykstra <bendykst@gmail.com>"]
description = "libmad 0.15.1b bindings for Rust"
repository = "https://github.com/RustAudio/simple-mad.rs"
readme = "README.md"
documentation = "https://docs.rs/simplemad_sys/"
keywords = ["mpeg", "mp3", "libmad"]
license = "MIT"
build = "build.rs"

[features]
default = ["vendor"]
vendor = ["gcc"]

[build-dependencies]
gcc = { version = "0.3.55", optional = true }
pkg-config = "0.3.17"

[lib]
name = "simplemad_sys"

[dependencies]
libc = "0.2.65"
