[package]
name = "simplemad_sys"
version = "0.5.0"
edition = "2018"
authors = ["Benjamin Dykstra <bendykst@gmail.com>"]
description = "libmad 0.15.1b bindings for Rust"
repository = "https://github.com/RustAudio/simple-mad.rs"
readme = "README.md"
documentation = "https://docs.rs/simplemad_sys/"
keywords = ["mpeg", "mp3", "libmad"]
license = "MIT"
build = "build.rs"

[features]
default = ["vendor"]
vendor = ["cc"]

[build-dependencies]
cc = { version = "1.0.47", optional = true }
pkg-config = "0.3.17"

[lib]
name = "simplemad_sys"

[dependencies]
libc = "0.2.65"
